@@ -22,6 +22,11 @@ namespace Castle.MicroKernel.Registration
 		private readonly String name;
 		private readonly String value;
 
+		/// <summary>
+		/// Constructs the <see cref="AttributeDescriptor{S}"/> descriptor with name and value.
+		/// </summary>
+		/// <param name="name">The attribute name.</param>
+		/// <param name="value">The attribute value.</param>
 		public AttributeDescriptor(String name, String value)
 		{
 			this.name = name;
@@ -34,6 +39,34 @@ namespace Castle.MicroKernel.Registration
 			{
 				configuration.Attributes[name] = value;
 			}
+		}
+	}
+
+	public class AttributeKeyDescriptor<S>
+	{
+		private readonly String name;
+		private readonly ComponentRegistration<S> component;
+
+		/// <summary>
+		/// Constructs the <see cref="AttributeKeyDescriptor{S}"/> descriptor with name.
+		/// </summary>
+		/// <param name="component">The component.</param>
+		/// <param name="name">The attribute name.</param>
+		public AttributeKeyDescriptor(ComponentRegistration<S> component, String name)
+		{
+			this.component = component;
+			this.name = name;
+		}
+
+		/// <summary>
+		/// Builds the <see cref="AttributeKeyDescriptor{S}"/> with value.
+		/// </summary>
+		/// <param name="value">The attribute value.</param>
+		/// <returns>The <see cref="ComponentRegistration{S}"/></returns>
+		public  ComponentRegistration<S> Eq(Object value)
+		{
+			string attribValue = (value != null) ? value.ToString() : "";
+			return component.AddAttributeDescriptor(name, attribValue);
 		}
 	}
 }
