@@ -1,6 +1,8 @@
 RC 4
 ====
 
+- Added Attribute to Component Registration fluent interface.
+
 - Add ability to use Configure components based on implementation type when
   using AllTypesOf.
 
